Fixing dropdown on the collapsed navbar

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -13,8 +13,42 @@
 
 @include text-emphasis-variant('.text-danger', $brand-danger);
 
+.navbar-nav {
+    @media (max-width: 768px) {
+        &.navbar-left {
+            float: left;
+            width: 30%;
+        }
+        &.navbar-right {
+            float: right;
+            width: 70%;
+        }
+        .dropdown-menu
+        .dropdown.open ul {
+            overflow: hidden;
+            clear: both;
+        }
+        .dropdown.open li {
+            display: inline-block;
+            width: 33%;
+            float: left;
+            overflow: hidden;
+        }
+        .dropdown.open li a {
+            padding-left: 15px;
+            padding-right: 0px;
+        }
+        .dropdown.open .divider {
+            display: none;
+        }
+        .dropdown.open .dropdown-menu {
+            overflow: hidden;
+        }
+    }
+}
 #header-options {
-    min-height: 60px; // Spacer pre-form relocation via JS
+    min-height: 40px; // Spacer pre-form relocation via JS
+    margin-bottom: 20px;
 
     #dataTable_filter, .btn-group {
         margin-right: 20px;
